# maafw-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
doc/: ARCHITECTURE.md  SPEC.md  TODO.md  USAGE.md
skills/maafw-cli/: OVERVIEW.md  SKILL.md  advanced.md  custom.md  node-params.md  pipeline.md  reco.md  troubleshooting.md
skills/maafw-cli/references/: advanced.md  node-params.md  troubleshooting.md
src/maafw_cli/: __init__.py  __main__.py  cli.py  download.py  paths.py
src/maafw_cli/commands/: action.py  click_cmd.py  completion.py  connect.py  connection.py  custom.py  daemon_cmd.py  device.py  interaction.py  key_cmd.py  ocr.py  pipeline.py  recognition.py  repl_cmd.py  resource.py  screenshot.py  scroll_cmd.py  session_cmd.py  swipe_cmd.py  type_cmd.py  vision.py
src/maafw_cli/core/: element.py  errors.py  filelock.py  ipc.py  keymap.py  local_executor.py  log.py  output.py  reconnect.py  screenshot.py  script_loader.py  session.py  target.py  textref.py
src/maafw_cli/daemon/: __init__.py  __main__.py  log.py  protocol.py  server.py  session_mgr.py
src/maafw_cli/maafw/: __init__.py  action.py  adb.py  control.py  pipeline.py  recognition.py  vision.py  win32.py
src/maafw_cli/maafw/controllers/: __init__.py  adb.py  dbg.py  playcover.py  wlroots.py
src/maafw_cli/services/: __init__.py  connection.py  context.py  custom.py  interaction.py  pipeline.py  recognition.py  registry.py  resource.py  vision.py
src/maafw_cli/services/connection/: __init__.py  _common.py  adb.py  dbg.py  device.py  playcover.py  win32.py  wlroots.py
tests/: conftest.py  mock_clicking_game.py  mock_controller.py  mock_custom_callbacks.py  mock_pipeline_window.py  mock_reco_window.py  mock_win32_window.py  test_adb_manual.py  test_cli.py  test_cli_context.py  test_connect_dbg.py  test_connect_playcover.py  test_connect_wlroots.py  test_custom.py  test_daemon_e2e.py  test_daemon_log.py  test_daemon_server.py  test_element.py  test_filelock.py  test_ipc.py  test_ipc_and_download.py  test_log.py  test_maafw.py  test_output.py  test_pipeline.py  test_protocol.py  test_recognition.py  test_reconnect.py  test_repl.py  test_services.py  test_session.py  test_session_mgr.py  test_target.py  test_textref.py  test_win32_manual.py
tests/fixtures/pipeline/: clicking_game.json  custom_flow.json  demo_flow.json
tests/integration/: conftest.py  test_clicking_game.py  test_custom.py  test_disconnection.py  test_game_pipeline_run.py  test_pipeline.py  test_reco.py  test_win32_manual.py
