[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "maafw-cli"
dynamic = ["version"]
description = "A command-line interface for MaaFramework"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "otowa-kotori" }
]
keywords = [
    "maa",
    "maaframework",
    "automation",
    "android",
    "adb",
    "ocr",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "maafw>=5.2.6",
    "click>=8.0.0",
    "opencv-python>=4.0.0",
    "platformdirs>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/otowa-kotori/maafw-cli"
Repository = "https://github.com/otowa-kotori/maafw-cli"
Issues = "https://github.com/otowa-kotori/maafw-cli/issues"

[project.scripts]
maafw-cli = "maafw_cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maafw_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "src/maafw_cli/**/*.py",
    "README.md",
    "LICENSE",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/maafw_cli/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not manual'"
asyncio_mode = "auto"
markers = [
    "manual: manual integration tests requiring a real device (not run by default)",
    "integration: integration tests (auto-sorted to run last)",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.4.0",
]
